# marvin

./: .gitignore  CMakeLists.txt  README.md  build.sbt
include/: download.h  emoji.h  feeds.h  lexicon.h  sentiment.h  smiley.h  tensorflow.h  types.h  utils.h
src/: download.cpp  emoji.cpp  feeds.cpp  lexicon.cpp  sentiment.cpp  smiley.cpp  tensorflow.cpp  utils.cpp
test/: marvin_tests.cpp
